# pain-away

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  test_db.py  test_pg.py  test_service.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  bat_a001a.py  bat_b001a.py  bat_ecr003a.py  bat_p001a.py  bat_s001a.py  check_db.py  pyproject.toml  run_phase3_regression.py  seed_db.py  seed_test_stock.py  test_bat.py  test_reception.py
backend/migrations/: env.py
backend/migrations/versions/: 05a5840bf1b5_add_final_bills_table.py  115a3b3fb642_add_brand_model.py  14d4b28f0049_add_holidaymodel.py  2c734bccbde7_add_inventory_model.py  37a49d764cc7_add_patientmodel.py  3b02eab7bca2_add_appointmentmodel.py  412149a5e262_add_billingdocumentmodel.py  43c0340054d3_add_balance_to_paymenttype.py  4691b95034c7_initial.py  53b219c49080_add_supplier_model.py  56b112546377_add_goods_receiving_model.py  5b3ba44252de_add_warehouse_model.py  776da4a68c13_update_appointmentmodel_fields.py  833adda162fa_add_purchase_order_model.py  866f963a17a7_remove_unique_payment_id_receipt.py  892e9c61f18d_add_billing_models.py  a2d52962ec8c_add_stock_movement_model.py  a3cad691dd13_add_product_model.py  b0fd43d0ad36_add_category_model.py  c645336c0911_add_customer_orders.py  (+4 more)
backend/src/: backfill.py  debug_docpath.py  debug_docs.py  debug_json.py  debug_paths.py  test_api_flow.py  test_checkout.py  test_commit.py  test_db.py  test_deactivate.py  test_workspace.py  test_zero.py  verify_cancel.py  verify_rebook.py
backend/src/app/: main.py  (+1 more)
backend/tests/: conftest.py
(+313 files in other folders)
